<resources>
    <string name="app_name">CryptocurrencyApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_message">Something went wrong! Can\'t load data.</string>
    <string name="network_error_message">Check your internet connection!</string>
    <string name="volume">Volume</string>
    <string name="percent_change">Percent change</string>
    <string name="change_24h">% 24h</string>
    <string name="change_1h">% 1h</string>
    <string name="price">Price</string>
    <string name="NameValue">Name</string>
</resources>
